rest_server/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-deployment
spec:
  selector:
    matchLabels:
      app: rest
  replicas: 1
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
      - name: rest-server
        image: karenlstengel/powtrackers-rest:latest
