rest_server/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service
  labels:
    app: rest
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: rest
