rest_server/rest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: localhost # remove on Gcloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rest-service
            port:
              number: 5000 # needs to match the service port
